freshed-rs-macros/tests/ui/fail/component_shorthand_non_ident_html_async_in.stderr
error: component shorthand prop must be an identifier, e.g. {value}
  --> tests/ui/fail/component_shorthand_non_ident_html_async_in.rs:15:41
   |
15 |     let _ = html_async_in!(ctx, <Button {a + b}></Button>);
   |                                         ^^^^^^^
